k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: infra-monitor
  namespace: infra-monitor

spec:
  selector:
    app: infra-monitor

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000

  type: ClusterIP
