k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: infra-monitor
  namespace: infra-monitor

spec:
  ingressClassName: traefik

  rules:
    - host: infra-monitor.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: infra-monitor
                port:
                  number: 80
